--- a/myweb/src/main/webapp/a.html
+++ b/myweb/src/main/webapp/a.html
@@ -1,7 +1,8 @@
 <html>
     <head>
+    <script src="static/a.js"></script>
     </head>
     <body>
-        <h1>xxxxxxxxxxxxxx</h1>
+    <script src="static/a.js"></script>
     </body>
 </html>
